prevent long proxy title from overlapping Edit button

--- a/chrome/css/style.css
+++ b/chrome/css/style.css
@@ -55,20 +55,17 @@ h1 {
 }
 
 .proxy-item-info {
-  flex-grow: 1;
+  flex: 1;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .proxy-item-name {
   font-weight: bold;
 }
 
-.proxy-item-details {
-  font-size: 12px;
-  color: #777;
-}
-
 .proxy-item-actions {
-  display: flex;
+  flex-shrink: 0;
 }
 
 .controls {
@@ -102,7 +99,7 @@ h1 {
   border: 1px solid #cecece;
 }
 
-.title {
+.proxy-title {
   margin-top: auto;
   margin-left: 10px;
   color: white;
@@ -111,6 +108,13 @@ h1 {
   border-radius: 10px;
   cursor: pointer;
   font-weight: bold;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+.proxy-title-label {
+  flex-shrink: 0;
 }
 
 .edit-btn {
